# kotaemon

./: .commitlintrc  .dockerignore  .env  .env.example  .env.secret  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  QWEN.md  README.md  app.py  compose.yml  credentials.txt.secret  doc_env_reqs.txt  docker-compose.dev.yml  docker-compose.yml  flowsettings.py  fly.toml  index.html  launch.sh  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  settings.yaml  settings.yaml.example  setup.py  sso_app.py  sso_app_alt.py  sso_app_demo.py  test_api.py
libs/kotaemon/: README.md  pyproject.toml  test_structured_output.ipynb
libs/kotaemon/kotaemon/: __init__.py  cli.py
libs/kotaemon/kotaemon/agents/: __init__.py  base.py  langchain_based.py  utils.py
libs/kotaemon/kotaemon/agents/io/: base.py
libs/kotaemon/kotaemon/agents/react/: agent.py  prompt.py
libs/kotaemon/kotaemon/agents/rewoo/: agent.py  planner.py  prompt.py  solver.py
libs/kotaemon/kotaemon/agents/tools/: __init__.py  base.py  google.py  llm.py  mcp.py  wikipedia.py
libs/kotaemon/kotaemon/base/: __init__.py  component.py  schema.py
libs/kotaemon/kotaemon/chatbot/: base.py  simple_respondent.py
libs/kotaemon/kotaemon/contribs/promptui/: .gitignore  config.py  export.py  themes.py  tunnel.py
libs/kotaemon/kotaemon/embeddings/: __init__.py  base.py  endpoint_based.py  fastembed.py  langchain_based.py  openai.py  tei_endpoint_embed.py  voyageai.py
libs/kotaemon/kotaemon/evaluate/: utils.py
libs/kotaemon/kotaemon/evaluate/answer_relevance/: __init__.py  base.py  llm.py
libs/kotaemon/kotaemon/evaluate/context_relevance/: __init__.py  base.py  llm.py
libs/kotaemon/kotaemon/evaluate/groundedness/: __init__.py  base.py  llm.py
libs/kotaemon/kotaemon/indices/: __init__.py  base.py  vectorindex.py
libs/kotaemon/kotaemon/indices/extractors/: doc_parsers.py
libs/kotaemon/kotaemon/indices/ingests/: __init__.py  extension_manager.py  extensions.py  files.py
libs/kotaemon/kotaemon/indices/qa/: __init__.py  citation.py  citation_qa.py  citation_qa_inline.py  format_context.py  text_based.py  utils.py
libs/kotaemon/kotaemon/indices/rankings/: __init__.py  cohere.py  llm.py  llm_scoring.py  llm_trulens.py
libs/kotaemon/kotaemon/indices/retrievers/: jina_web_search.py  tavily_web_search.py
libs/kotaemon/kotaemon/indices/splitters/: __init__.py
libs/kotaemon/kotaemon/llms/: __init__.py  base.py  branching.py  cot.py  linear.py
libs/kotaemon/kotaemon/llms/chats/: __init__.py  base.py  endpoint_based.py  langchain_based.py  llamacpp.py  minimax.py  openai.py
libs/kotaemon/kotaemon/llms/completions/: __init__.py  base.py  langchain_based.py
libs/kotaemon/kotaemon/llms/prompts/: base.py  template.py
libs/kotaemon/kotaemon/loaders/: __init__.py  adobe_loader.py  azureai_document_intelligence_loader.py  base.py  composite_loader.py  docling_loader.py  docx_loader.py  excel_loader.py  html_loader.py  mathpix_loader.py  mp3_loader.py  ocr_loader.py  pdf_loader.py  txt_loader.py  unstructured_loader.py  vision_loader.py  web_loader.py
libs/kotaemon/kotaemon/loaders/paddleocr_loader/: __init__.py  adapter.py  paddleocr_vl_loader.py  ppstructure_v3_loader.py
libs/kotaemon/kotaemon/rerankings/: __init__.py  base.py  cohere.py  tei_fast_rerank.py  voyageai.py
libs/kotaemon/kotaemon/storages/: __init__.py
libs/kotaemon/tests/: _test_multimodal_reader.py  conftest.py  simple_pipeline.py  test_agent.py  test_composite.py  test_cot.py  test_docstores.py  test_documents.py  test_embedding_models.py  test_excel_numeric.py  test_indexing_retrieval.py  test_ingestor.py  test_integration_voyageai.py  test_llms_chat_models.py  test_llms_completion_models.py  test_logging_config.py  test_mcp_manager.py  test_mcp_tools.py  test_multimodal_reader.py  test_paddleocr_loader.py  test_post_processing.py  test_prompt.py  test_promptui.py  test_reader.py  test_reranking.py  test_splitter.py  test_table_reader.py  test_telemetry.py  test_template.py  test_tools.py  test_vectorstore.py
libs/kotaemon/tests/resources/: dummy.docx  dummy.mhtml  embedding_openai_batch.json  fullocr_sample_output.json  policy.md
libs/ktem/: .gitignore  MANIFEST.in  README.md  flowsettings.py  launch.py  pyproject.toml  requirements.txt
libs/ktem/khapptests/: test_qa.py
libs/ktem/khapptests/resources/: embedding_openai.json
libs/ktem/ktem/: app.py  components.py  exceptions.py  extension_protocol.py  logging_config.py  main.py  settings.py
libs/ktem/ktem/assets/: __init__.py  theme copy.py  theme.py
libs/ktem/ktem/assets/css/: main.css
libs/ktem/ktem/config/: validator.py
libs/ktem/ktem/db/: base_models.py  engine.py  models.py
libs/ktem/ktem/embeddings/: db.py  manager.py  ui.py
libs/ktem/ktem/extensions/: extensions.py
libs/ktem/ktem/index/: __init__.py  base.py  manager.py  models.py  ui.py
libs/ktem/ktem/indexing/: base.py  file.py
libs/ktem/ktem/llms/: db.py  manager.py  ui.py
libs/ktem/ktem/loaders/: extensions.py  factory.py
libs/ktem/ktem/mcp/: __init__.py  db.py  manager.py  ui.py
libs/ktem/ktem/metrics/: counter.py
libs/ktem/ktem/pages/: about.py  help.py  login.py  settings.py  setup.py
libs/ktem/ktem/reasoning/: base.py  react.py  rewoo.py  simple.py
libs/ktem/ktem/rerankings/: db.py  manager.py  ui.py
libs/ktem/ktem/scenarios/: crud.py  pipelines.py  ui.py
libs/ktem/ktem/tags/: __init__.py  crud.py  index.py  pipelines.py  ui.py
libs/ktem/ktem/utils/: __init__.py  commands.py  conversation.py  file.py  generator.py  hf_papers.py  lang.py  plantuml.py  rate_limit.py  render.py  visualize_cited.py
libs/ktem/ktem_tests/: test_decompose_question.py  test_file_deletion.py  test_file_upload.py  test_language_settings.py  test_mcp_manager.py  test_qa.py
libs/ktem/migrations/: README  env.py
libs/ktem/scripts/: mock.py
mcp_server/: .env.example  README.md  __init__.py  enhanced_server.py  pyproject.toml  requirements.txt  server.py  standalone_server.py
mcp_server/examples/: README.md  claude_config_helper.py  client_demo.py
(+566 files in other folders)
