[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = []

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
tag_filter = "v?\\d+(\\.\\d+)*.*"

[project]
name = "kotaemon-app"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "Kotaemon App"
dependencies = [
    # adv
    "kotaemon @ git+https://github.com/Cinnamon/kotaemon.git/@fix/dep-typo#subdirectory=libs/kotaemon",
    "ktem @ git+https://github.com/Cinnamon/kotaemon.git@fix/dep-typo#subdirectory=libs/ktem",
    "wikipedia>=1.4.0,<1.5",
    "duckduckgo-search>=6.1.0,<6.2.0",
    "googlesearch-python>=1.2.4,<1.3",
    "python-docx>=1.1.0,<1.2",
    "unstructured[pdf]==0.13.4",
    "sentence_transformers==2.7.0",
    "elasticsearch>=8.13.0,<8.14",
    "pdfservices-sdk @  git+https://github.com/niallcm/pdfservices-python-sdk.git@bump-and-unfreeze-requirements",
    "beautifulsoup4>=4.12.3,<4.13",
]
authors = [
    { name = "@trducng", email = "john@cinnamon.is" },
    { name = "@lone17", email = "ian@cinnamon.is" },
    { name = "@taprosoft", email = "tadashi@cinnamon.is" },
    { name = "@cin-albert", email = "albert@cinnamon.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://cinnamon.github.io/kotaemon/"
Repository = "https://github.com/Cinnamon/kotaemon/"
Documentation = "https://cinnamon.github.io/kotaemon/"

[tool.codespell]
skip = "*.js,*.css,*.map"
# `llm` abbreviation for large language models
ignore-words-list = "llm,fo"
quiet-level = 3
check-filenames = ""

[tool.isort]
known_first_party = ["kotaemon"]
