[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kotaemon-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for kotaemon RAG capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kotaemon Contributors", email = "kotaemon.support@cinnamon.is"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "asyncio-compat>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
full = [
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "chromadb>=0.4.0",
    "lancedb>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "langchain>=0.1.0",
    "unstructured[all-docs]>=0.10.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/Cinnamon/kotaemon"
Documentation = "https://cinnamon.github.io/kotaemon/"
Repository = "https://github.com/Cinnamon/kotaemon"
Issues = "https://github.com/Cinnamon/kotaemon/issues"

[project.scripts]
kotaemon-mcp = "mcp_server.server:main"
kotaemon-mcp-enhanced = "mcp_server.enhanced_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.setuptools.package-data]
mcp_server = ["*.md", "examples/*", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mcp_server"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "kotaemon.*",
    "ktem.*",
    "theflow.*",
    "mcp.*",
    "gradio.*",
    "langchain.*",
    "chromadb.*",
    "lancedb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
