# build backand and build dependencies
[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = ["kotaemon*"]
packages.find.exclude = ["tests*", "env*"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
tag_filter = "v?\\d+(\\.\\d+)*.*"

# metadata and dependencies
[project]
name = "kotaemon"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "Kotaemon core library for AI development."
dependencies = [
    "langchain>=0.1.16,<0.2.0",
    "langchain-community>=0.0.34,<0.1.0",
    "langchain-openai>=0.1.4,<0.2.0",
    "openai>=1.23.6,<2",
    "theflow>=0.8.6,<0.9.0",
    "llama-index>=0.10.40,<0.11.0",
    "llama-hub>=0.0.79,<0.1.0",
    "gradio>=4.31.0,<5",
    "openpyxl>=3.1.2,<3.2",
    "cookiecutter>=2.6.0,<2.7",
    "click>=8.1.7,<9",
    "pandas>=2.2.2,<2.3",
    "trogon>=0.5.0,<0.6",
    "tenacity>=8.2.3,<8.3",
    "python-dotenv>=1.0.1,<1.1",
    "chromadb>=0.4.21,<0.5",
    "unstructured==0.13.4",
    "pypdf>=4.2.0,<4.3",
    "html2text==2024.2.26",
    "fastembed==0.2.6",
    "llama-cpp-python>=0.2.72,<0.2.80",
    "azure-ai-documentintelligence",
    "cohere>=5.3.2,<5.4",
]
readme = "README.md"
authors = [
    { name = "@trducng", email = "john@cinnamon.is" },
    { name = "@lone17", email = "ian@cinnamon.is" },
    { name = "@taprosoft", email = "tadashi@cinnamon.is" },
    { name = "@cin-albert", email = "albert@cinnamon.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
adv = [
    "wikipedia>=1.4.0,<1.5",
    "duckduckgo-search>=6.1.0,<6.2",
    "googlesearch-python>=1.2.4,<1.3",
    "python-docx>=1.1.0,<1.2",
    "unstructured[pdf]==0.13.4",
#    "sentence_transformers==2.7.0",
    "elasticsearch>=8.13.0,<8.14",
    "beautifulsoup4>=4.12.3,<4.13",
]
dev = [
    "ipython",
    "pytest",
    "pytest-mock",
    "pre-commit",
    "black",
    "flake8",
    "sphinx",
    "coverage",
    "python-decouple"
]
all = ["kotaemon[adv,dev]"]

[project.scripts]
kotaemon = "kotaemon.cli:main"
