[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages.find.include = ["ktem*"]
packages.find.exclude = ["tests*", "env*"]

[project]
name = "ktem"
version = "0.2.0"
requires-python = ">= 3.10"
description = "RAG-based Question and Answering Application"
dependencies = [
    "click",
    "platformdirs",
    "pluggy",
    "python-decouple",
    "sqlalchemy",
    "sqlmodel",
    "fastembed",
    "tiktoken",
    "gradio>=4.26.0",
    "markdown",
]
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "john", email = "john@cinnamon.is" },
    { name = "ian", email = "ian@cinnamon.is" },
    { name = "tadashi", email = "tadashi@cinnamon.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
