[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages.find.exclude = ["ktem_tests*", "env*"]
packages.find.include = ["ktem*"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
tag_filter = "v?\\d+(\\.\\d+)*.*"

[project]
name = "ktem"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "RAG-based Question and Answering Application"
dependencies = [
    "click",
    "platformdirs",
    "pluggy",
    "python-decouple",
    "sqlalchemy",
    "sqlmodel",
    "tiktoken",
    "gradio>=4.26.0",
    "markdown",
]
authors = [
    { name = "john", email = "john@cinnamon.is" },
    { name = "ian", email = "ian@cinnamon.is" },
    { name = "tadashi", email = "tadashi@cinnamon.is" },
    { name = "albert", email = "albert@cinnamon.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
